# p16_assembler

./: .gitignore  CMakeLists.txt  Makefile  README.md  das_installer.iss  pas_installer.iss  pas_release_notes  pas_todo
doc/: Makefile  conf.py  diferencas_p16_arm  index.rst  linguagem assembly do PDS16.odt  notas  p16_isa.ods  p16_programacao_assembly.odt  p16as_wordlist  pas_anexos.rst  pas_assembly_language.rst  pas_assembly_syntax  pas_assembly_syntax.rst  pas_instalacao.rst  pas_introducao.rst  pas_referencias.rst  pas_utilizacao.rst  pdsv2_isa.ods
doc/code/: Makefile  multiply.hex  multiply.lst  multiply.s
doc/code/sections/: seccoes1.hex  seccoes1.lst  seccoes1.s  seccoes2.hex  seccoes2.lst  seccoes2.s
doc/figures/: hexintel.dia
samples/casos/: casos.s
samples/div/: div16.s
samples/find_generic/: find_generic.s
samples/misc/: program_test.s
samples/search/: search.s
samples/simple/: simple.s
src/: code_generator.cpp  code_generator.h  cpp_printf.cpp  cpp_printf.h  das.cpp  directive.cpp  directive.h  error.cpp  error.h  expression.cpp  expression.h  expression_base.h  iarm.h  iarm.l  iarm.ypp  instruction.cpp  instruction.h  listing.cpp  listing_generator.h  location.h  memory_space.cpp  memory_space.h  p16.l  p16.ypp  pas.cpp  pas.h  properties.h  relocations.cpp  relocations.h  sections.cpp  sections.h  statement.h  symbols.cpp  symbols.h  utils.h  value_type.cpp  value_type.h  version.h  visitor.h
test/: make_reference.sh  sources_no_errors  sources_only_warnings  sources_width_errors  test1.s  test10.s  test11.s  test12.s  test13.s  test14.s  test15.s  test16.s  test17.s  test18.s  test19.s  test2.s  test20.s  test21.s  test22.s  test23.s  test24.s  test25.s  test26.s  test27.s  test28.s  test29.s  test3.s  test30.s  test31.s  test4.s  test5.s  test6.s  test7.s  test8.s  test9.s  test_all.sh  tests_description
